--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,30 @@
 server.port=8085
 server.servlet.context-path=/JwtVue
-
+#redis
 spring.redis.host=192.168.30.10
 spring.redis.port=6379
 spring.redis.password=zhuang1216
-
-spring.datasource.driver-class-name= com.mysql.jdbc.Driver
-spring.datasource.url= jdbc:mysql://127.0.0.1:3306/jwtvue?useOldAliasMetadataBehavior=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
-spring.datasource.username= root
-spring.datasource.password= zhuang1216
-
+#数据源
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jwtvue?useOldAliasMetadataBehavior=true&useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=zhuang1216
+#myBatis配置
 mybatis.mapperLocations=classpath:mapping/*.xml
-
-#pagehelper分页插件
-pagehelper.helperDialect= mysql
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#分页插件
+pagehelper.helperDialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 pagehelper.params=count=countSql
-
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#日志配置
+logging.config=classpath:logset/logback-spring.xml
+logging.path=classpath:logset/log/
+#邮箱配置
+spring.mail.host=smtp.qq.com
+spring.mail.username=827812879@qq.com
+# 注意这里不是邮箱密码，而是SMTP授权密码
+spring.mail.password=usxleqnclplibegc
+spring.mail.port=25
+spring.mail.protocol=smtp
+spring.mail.default-encoding=UTF-8
