增加密码找回功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,9 +22,9 @@ logging.config=classpath:logset/logback-spring.xml
 logging.path=classpath:logset/log/
 #邮箱配置
 spring.mail.host=smtp.qq.com
-spring.mail.username=827812879@qq.com
+spring.mail.username=
 # 注意这里不是邮箱密码，而是SMTP授权密码
-spring.mail.password=usxleqnclplibegc
+spring.mail.password=
 spring.mail.port=25
 spring.mail.protocol=smtp
 spring.mail.default-encoding=UTF-8
